# notify_experiment_status_slack

./: .gitignore  base_config.yaml  pyproject.toml
notify_experiment_status_slack/: monitor_process.py
