[tool.poetry]
name = "notify-experiment-status-slack"
version = "0.1"
description = ""
authors = ["Kensuke-Mitsuzawa <kensuke.mit@gmail.com>"]
readme = "README.md"
packages = [{include = "notify_experiment_status_slack"}]

[tool.poetry.dependencies]
python = "^3.8"

slack-sdk = "*"
PyYAML = "*"
psutil = "*"
logzero = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-resource-path = "^1.3.0"
python-dotenv = "*"
nbmake = "0.5"
pytest-parallel = "*"
sphinx = "*"
myst-parser = "*"
sphinx_rtd_theme = "*"
papermill = "*"


[tool.poetry.scripts]

[tool.poetry.extras]

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"

[build-system]
requires = ["setuptools", "poetry", "poetry_core>=1.0", "cython"]
build-backend = "poetry.core.masonry.api"
